k8s/coma/apps/vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    cert-manager.io/common-name: vault.coma.artichoke.network
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd,default-hsts@kubernetescrd
spec:
  rules:
    - host: "vault.coma.artichoke.network"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: vault
                port:
                  number: 8200
  tls:
    - hosts:
        - "vault.coma.artichoke.network"
      secretName: tls-cert
